force-app/main/default/objects/Test_Plan_Instance__c/Test_Plan_Instance__c.object-meta.xml
<CustomObject>
    <label>Test Plan Instance</label>
    <nameField>
        <displayFormat>TPI-{0000000}</displayFormat>
        <label>Test Plan Instance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Plan Instances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>