force-app/main/default/objects/Test_Plan_Instance__c/fields/Number_of_Runs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Runs__c</fullName>
    <label>Number of Runs</label>
    <summaryForeignKey>Test_Plan_Instance_Run_Junction__c.Test_Plan_Instance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>