force-app/main/default/objects/Test_Plan_Instance__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Plan_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>