force-app/main/default/objects/Test_Plan_Instance__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>Text(Test_Plan__r.Product_Family_PL__c)</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>