force-app/main/default/objects/Test_Plan_Instance__c/fields/Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Run_Status__c</fullName>
    <formula>CASE(TEXT(Status__c),
&quot;Complete&quot;, IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 10, 10) &amp; &quot; Complete&quot;,
&quot;Not Started&quot;, IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 10, 10) &amp; &quot; Not Started&quot;,
&quot;Blocked&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 10, 10) &amp; &quot; Blocked&quot;,
&quot;In Progress&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000001G6XM&quot;, &quot;blue&quot;, 10, 10) &amp; &quot; In Progress&quot;,
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 10, 10) &amp; &quot; Not Started&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Run Status</label>
    <type>Text</type>
</CustomField>