force-app/main/default/objects/Test_Plan_Instance__c/fields/Test_Plan__c.field-meta.xml
<CustomField>
    <fullName>Test_Plan__c</fullName>
    <label>Test Plan</label>
    <referenceTo>Test_Plan__c</referenceTo>
    <relationshipLabel>Test Plan Instances</relationshipLabel>
    <relationshipName>Test_Plan_Instances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>