force-app/main/default/objects/Test_Plan_Instance__c/fields/Window_Height__c.field-meta.xml
<CustomField>
    <fullName>Window_Height__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Height of visible portion of test run scroll pane</description>
    <label>Window Height</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>